[Misc] fix test TestNoMinidumpAtFullGC.java failure
Summary: fix test TestNoMinidumpAtFullGC.java failure due to default GC change

Test Plan: CI pipeline

Reviewed-by: sendaoYan, D-D-H

Issue: https://github.com/dragonwell-project/dragonwell8/issues/577